<resources>
    <string name="app_name">Cryptocurrency Converter</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1943700858932247/4609978137</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-1943700858932247/4683373591</string>
    <string name="banner_ad_unit_id_big" translatable="false">ca-app-pub-1943700858932247/6248330570</string>
    <string name="follow_us_twitter" translatable="false">https://twitter.com/RomeRock_Apps</string>
    <string name="follow_us_twitter_profile" translatable="false">twitter://user?screen_name=RomeRock_Apps</string>
    <string name="facebook_app_id" translatable="false">2292294817451565</string>
    <string name="banner_rewarded_AD_UNIT_ID" translatable="false">ca-app-pub-1943700858932247/1949938002</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1943700858932247/1949938002</string>
    <string name="follow_us_instagram" translatable="false">https://www.instagram.com/romerock_apps/</string>
    <string name="link_tipCalculator" translatable="false">com.romerock.apps.utilities.tipcalculator&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
    <string name="link_xpressVote" translatable="false">com.romerock.apps.utilities.xpressvote&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
    <string name="link_quickConverter" translatable="false">com.romerock.apps.utilities.quickunitconverter&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
    <string name="link_LoanCalulator" translatable="false">com.romerock.apps.utilities.loancalculator&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
    <string name="link_TaxCalculator" translatable="false">com.romerock.apps.utilities.salestaxdiscountcalculator&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
    <string name="link_ClashMate" translatable="false">com.romerock.apps.utilities.clashroyale.tournamentfinder&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
    <string name="link_52Weeks" translatable="false">com.romerock.apps.utilities.fiftytwoweekchallenge&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
    <string name="link_currency" translatable="false">com.romerock.apps.utilities.currencyconverter&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
    <string name="link_piggy" translatable="false">com.romerock.apps.utilities.moneysavingpiggy&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
    <string name="link_books" translatable="false">com.romerock.apps.utilities.latestbooks&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
    <string name="follow_us_facebook" translatable="false">https://www.facebook.com/RomeRock-App-Studio-337180269970605</string>
    <string name="follow_us_facebook_profile" translatable="false">fb://page/337180269970605</string>
    <string name="url_imgs" translatable="false">https://imateq.romerock.com/imateq/cryptocurrency/currencies/200SC200/%s.png</string>
    <string name="link_twittter" translatable="false">https://www.twitter.com/RomeRock_Apps</string>
    <string name="preferences_count_some_love" translatable="false">countSomeLove</string>
    <string name="preferences_name" translatable="false">currencyConverterRomeRock</string>
    <string name="udidAndroid" translatable="false">udidAndroid</string>
    <string name="purchaseAndroid" translatable="false">purchaseAndroid</string>
    <string name="purchaseOrder" translatable="false">purchaseOrder</string>
    <string name="fcmUser" translatable="false">fcmUser</string>
    <string name="preferences_isInvalidate" translatable="false">preferences_isInvalidate</string>
    <string name="preferences_check_inventory" translatable="false">preferencesCheckInventory</string>
    <string name="privacy_policy_url" translatable="false">https://apps.romerock.com/foreign-exchange-converter/privacy-policy/</string>
    <string name="dateForInterstitial" translatable="false">dateForInterstitial</string>
    <string name="preferences_topic" translatable="false">preferences_topic</string>
    <string name="preferences_count_keys" translatable="false">preferences_count_keys</string>
    <string name="globalCount" translatable="false">globalCount</string>
    <string name="preferences_defaultCurrencies_first_time" translatable="false">preferences_defaultCurrencies_first_time</string>
    <string name="preferences_interstitial_count" translatable="false">preferences_interstitial_count</string>
    <string name="banner_rewarded_APP_ID" translatable="false">ca-app-pub-1943700858932247/1949938002</string>
    <string name="share_link" translatable="false">https://goo.gl/EBkFAh</string>
    <string name="preferences_defaultCurrencies" translatable="false">defaultCurrencies</string>
    <string name="preferences_theme_tittle" translatable="false">themeTittle</string>
    <string name="preferences_rate" translatable="false">rateApp</string>
    <string name="language_settings" translatable="false">LanguageSettings</string>
    <string name="mail_support" translatable="false">contact@romerock.com</string>
    <string name="badge_settings" translatable="false">BadgeSettings</string>
    <string name="shareAndRewarded" translatable="false">shareAndRewardedPreferences</string>
    <string name="update_time">Updated:</string>
    <string name="range1D">24H</string>
    <string name="range1W">1W</string>
    <string name="range1M">1M</string>
    <string name="range6M">6M</string>
    <string name="range1Y">1Y</string>
    <string name="range3Y">3Y</string>
    <string name="current">Current</string>
    <string name="avg">Avg</string>
    <string name="max">Max</string>
    <string name="count1ARange" translatable="false">count1ARange</string>
    <string name="count3ARange" translatable="false">count3ARange</string>
    <string name="countCryptoAded" translatable="false">countCryptoAded</string>
    <string name="min">Min</string>
    <string name="fluctuation">fluctuation</string>
    <string name="titleCurrency">Select Currency</string>
    <string name="titleDetails">Details</string>
    <string name="search">Search</string>
    <string name="share_rewarded">Share and get rewarded</string>
    <string name="Feedback">Feedback</string>
    <string name="rateus">Rate us</string>
    <string name="Language">Language</string>
    <string name="Themes">CHANGE THEME/COLORS</string>
    <string name="tryOurFree">TRY OUR FREE APPS</string>
    <string name="label_tipCalculator">Tip Calculator &amp; Bill Split</string>
    <string name="label_xpressVote">Xpress Vote - Surveys &amp; Polls</string>
    <string name="followUs">Follow us!</string>
    <string name="subscribeMe">Donate and Become Premium</string>
    <string name="notifyMe">Add Notifications</string>
    <string name="edit">Edit</string>
    <string name="add_currency">Add currency</string>
    <string name="done">Done</string>
    <string name="have_currency">Sorry, but you already selected this currency, please try with a different one</string>
    <string name="graph">Graph</string>
    <string name="error_eval">Error. Invalid Formula</string>
    <string name="no_thanks">No thanks</string>
    <string name="pop_up_get_some_love_tittle">Will you show us\nsome love?</string>
    <string name="pop_up_get_some_love_content">If you like Currency Converter,\nlet us know.\nThank you for your support!</string>
    <string name="pop_up_rate_subject">Currency Converter - Feedback - Android</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="pop_up_share_tittle">Share with the World</string>
    <string name="pop_up_share_content">Do you like Crypto Currency Conveter?\nShare our app on Facebook or Twitter !!</string>
    <string name="send">Send</string>
    <string name="pop_up_get_feedback_content_mail">Leave a comment</string>
    <string name="pop_up_feedback_tittle">Do you have any suggestion?\nWe are here for you :)</string>
    <string name="settings_option_select_lenguage">Select language</string>
    <string name="current_price">Current price</string>
    <string name="choose_email_error">There are no email clients installed.</string>
    <string name="notifyMeChangeCurrency">Notify me about %s vs %s</string>
    <string name="price_per_month">%s/Month</string>
    <string name="unlimited_hourly">Unlimited Hourly Notifications</string>
    <string name="unlimited_price">Unlimited Price Triggers\nNotifications</string>
    <string name="remove_annoying_ads">Remove annoying Ads</string>
    <string name="unlock_daylight_theme">Unlock Daylight Theme</string>
    <string name="go_premium">GO PREMIUM: \nNOTIFICATIONS, ALERTS,\nREMOVE ADS</string>
    <string name="notification_center">Notification Center</string>
    <string name="setup_push_notification">Setup Push Notifications</string>
    <string name="vs">VS</string>
    <string name="dialy_notification">Dialy Notification by Hour</string>
    <string name="you_will_receive_notification_at">You will recive the notification at</string>
    <string name="over_alert">Over Alert/ Price Triggers</string>
    <string name="over">Over</string>
    <string name="safe_notification">Save Configuration</string>
    <string name="below">Below</string>
    <string name="add">Add</string>
    <string name="titleNotificationCenter">Notification Center</string>
    <string name="time_already_scheduled">The selected time is already scheduled</string>
    <string name="need_at_least_2_currencies">You need to have at least two currencies to setup notifications</string>
    <string name="cant_save_same_currencies">You can not schedule notifications with the same currency</string>
    <string name="need_hours">You need add at least 1 notification.</string>
    <string name="empty_notification_center">You don’t have any\nnotifications</string>
    <string name="below_cant_over">Below amount cannot be higher than the over amount</string>
    <string name="settings_option_select_scheme_color">Select scheme color</string>
    <string name="settings_preview">PREVIEW</string>
    <string name="settings_preview_pro_version">PRO VERSION</string>
    <string name="shareTwitter">I\'m using #Cypto #Currency  #Converter. Download for #FREE #Android</string>
    <string name="share_success">Thank you for sharing</string>
    <string name="label_quickConverter">Quick Unit Converter</string>
    <string name="tittle_purchse_finish">Thank you for your purchase!</string>
    <string name="tittle_purchse_finish_error">ERROR. Payment Failed</string>
    <string name="Ok_labe">Ok</string>
    <string name="receive_notification_when_price">Recive notification when price reaches</string>
    <string name="Play_Store_Request_Wear" translatable="false">Play Store Request to Wear device successful.</string>
    <string name="email_optional">Email - optional</string>
    <string name="pay_as_much_you_want">* Pay as much as you want for  the premium version.\n* We are an Indi Company and we only urvive thanks to your support  c:"</string>
    <string name="VIEW_AD_AND_UNLOCK">VIEW AD AND UNLOCK THIS FEATURE</string>
    <string name="oh_oh">Oh oh!</string>
    <string name="donate_us" translatable="false">Donate us</string>
    <string name="this_feature_is_blocked">This feature is blocked :(, if you support our team with some love, we will enable this and other functions, and we will remove those annoying ads</string>
</resources>