<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relContentPopup"
    android:layout_width="284dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/relContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/dialog_theme1">

        <RelativeLayout
            android:id="@+id/relTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/txtTittleImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_lineal_alert_title_theme1"
                android:fontFamily="@font/dosis_medium"
                android:text="@string/oh_oh"
                android:paddingBottom="8dp"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relTittle"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:src="@drawable/ohoh" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="#797979"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/this_feature_is_blocked"    />


            <Button
                android:id="@+id/popUpDonate"
                android:background="?attr/colorAccent"
                android:textColor="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_us"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/dosis_medium"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/popUpViewVideo"
                android:background="@color/secundaryTextColorTheme1"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/VIEW_AD_AND_UNLOCK"
                android:fontFamily="@font/dosis_medium"
                android:textAllCaps="false" />




            <TextView
                android:id="@+id/popUpNoThanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="11dp"
                android:text="@string/no_thanks"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/dosis_regular"
                android:textSize="17sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>