<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relContentPopup"
    android:layout_width="284dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/relContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/dialog_theme1">

        <RelativeLayout
            android:id="@+id/relTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/txtTittleImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_lineal_alert_title_theme1"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:fontFamily="@font/dosis_regular"
                android:text="@string/pop_up_share_tittle"
                android:textColor="@color/primaryTextTheme1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtVotesPurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTittleImg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/dosis_regular"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/pop_up_share_content"
                android:textColor="@color/primaryTextTheme1"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relTittle"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/popUpFacebookBoton"
                style="@style/pop_up_full_boton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_on_facebook"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/dosis_medium"
                android:background="@drawable/border_buttont_facebook"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/popUpNoThanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:paddingTop="11dp"
                android:fontFamily="@font/dosis_regular"
                android:text="@string/no_thanks"
                android:textColor="@color/primaryTextTheme1"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>